--- a/gui/public/index.html
+++ b/gui/public/index.html
@@ -125,10 +125,10 @@
             <div class="home-text-wrapper relative container">
                 <div id="hello-world-app" class="home-message">
                     <img style="width: 30%;" src="images/robot" alt="">
-                    <p>LMR {{ msg }} #{names}</p>
+                    <p>LMR {{ msg }}</p>
                     <div class="btn-wrapper">
                         <div class="text-center">
-                            <a href="/pug" class="btn btn-primary">Read More</a> &nbsp;
+                            <a href="/cozmo" class="btn btn-primary">Read More</a> &nbsp;
                         </div>
                     </div><!-- end row -->
                 </div>
@@ -259,7 +259,7 @@
                                         <button v-on:click="postSampleData()">Click to Post Sample data</button>
                                         <div>{{postResult}}</div>
                                     </div-->
-                                <a href="/pug"><button>Cozmo LMR</button></a>
+                                <a href="/cozmo"><button>Cozmo LMR</button></a>
                                 <p>some description lol</p>
                                 <div class="clearfix"></div>
     
