--- a/gui/public/cozmo.html
+++ b/gui/public/cozmo.html
@@ -35,7 +35,6 @@ body, html {height: 100%}
           <a class="dropdown-item" href="#"><h6 class="par" id="MATH">MATH</h6></a>
           <a class="dropdown-item" href="#"><h6 class="nopar" id="YES">YES</h6></a>
           <a class="dropdown-item" href="#"><h6 class="nopar" id="SOUND">SOUND</h6></a>
-          <a class="dropdown-item" href="#"><h6 class="nopar" id="DRIVEOFF">DRIVEOFF</h6></a>
         </div>
       </div>
       <div class="dropdown">
@@ -43,21 +42,61 @@ body, html {height: 100%}
             Drive
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="#"><h6 class="nopar" id="DRIVEOFF">DRIVEOFF</h6></a>
+          <a class="dropdown-item" href="#"><h6 class="par" id="MOVE">MOVE</h6></a>
+          <a class="dropdown-item" href="#"><h6 class="par" id="TURN">TURN</h6></a>
+          <a class="dropdown-item" href="#"><h6 class="par" id="DRIVEOFF">LIFT</h6></a>
         </div>
       </div>
       <div class="dropdown">
         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown button
+          Animations
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="#"><h6 class="nopar" id="PARTY">PARTY</h6></a>
+          <a class="dropdown-item" href="#"><h6 class="par" id="LIGHT">LIGHT</h6></a>
+          <a class="dropdown-item" href="#"><h6 class="nopar" id="WIN">WIN</h6></a>
+          <a class="dropdown-item" href="#"><h6 class="nopar" id="HICCUP">HICCUP</h6></a>
+          <a class="dropdown-item" href="#"><h6 class="nopar" id="SURPRISE">SURPRISE</h6></a>
+          <a class="dropdown-item" href="#"><h6 class="nopar" id="EXCITED">EXCITED</h6></a>
+          <a class="dropdown-item" href="#"><h6 class="nopar" id="SNEEZE">SNEEZE</h6></a>
+          <a class="dropdown-item" href="#"><h6 class="nopar" id="SCARED">SCARED</h6></a>
         </div>
       </div>
+      <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                CubesAnimations
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#"><h6 class="nopar" id="CUBERED">CUBERED</h6></a>
+              <a class="dropdown-item" href="#"><h6 class="par" id="CUBEBLUE">CUBEBLUE</h6></a>
+              <a class="dropdown-item" href="#"><h6 class="nopar" id="CUBEGREEN">CUBEGREEN</h6></a>
+              <a class="dropdown-item" href="#"><h6 class="nopar" id="PICKUP">PICKUP</h6></a>
+              <a class="dropdown-item" href="#"><h6 class="nopar" id="DROP">DROP</h6></a>
+              <a class="dropdown-item" href="#"><h6 class="nopar" id="ROLLCUBE">ROLLCUBE</h6></a>
+              <a class="dropdown-item" href="#"><h6 class="nopar" id="WHEELIE">WHEELIE</h6></a>
+            </div>
+          </div>
+          <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Animals
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <a class="dropdown-item" href="#"><h6 class="nopar" id="DUCK">DUCK</h6></a>
+                  <a class="dropdown-item" href="#"><h6 class="par" id="ELEPHANT">ELEPHANT</h6></a>
+                  <a class="dropdown-item" href="#"><h6 class="nopar" id="SHEEP">SHEEP</h6></a>
+                </div>
+              </div>
+              <div>
+                    <a href="/" style="background-color: #a64dff !important;" class="btn btn-secondary"  aria-haspopup="true" aria-expanded="false">
+                            Home
+                    </a>
+              </div>
+              <div>
+                    <a href="localhost:5000/" style="background-color: #669999 !important;"  class="btn btn-secondary"  aria-haspopup="true" aria-expanded="false">
+                            Code
+                    </a>
+              </div>
     </div>
     <div class="jumbotron" style="color: black;">
         <h3 class="display-6">Your current command</h1>
